--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "deamdify",
+  "name": "deamdify2",
   "version": "0.1.1",
   "description": "Browserify transform that converts AMD to CommonJS.",
   "keywords": [
