--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/jaredhanson/deamdify.git"
+    "url": "git://github.com/5to6/deamdify2.git"
   },
   "bugs": {
-    "url": "http://github.com/jaredhanson/deamdify/issues"
+    "url": "https://github.com/5to6/deamdify2/issues"
   },
   "author": {
     "name": "Jared Hanson",
@@ -38,7 +38,7 @@
     "chai": "1.x.x"
   },
   "scripts": {
-    "test": "NODE_PATH=.. node_modules/.bin/mocha --reporter spec --require test/bootstrap/node test/*.test.js"
+    "test": "mocha --reporter spec --require test/bootstrap/node test/*.test.js"
   },
   "engines": {
     "node": ">= 0.6.0"
